Added front end logic for ORM Connection (DB Selection and DB Createion).

--- a/src/main/resources/templates/conn/db-connection.twig
+++ b/src/main/resources/templates/conn/db-connection.twig
@@ -44,11 +44,11 @@
 
             <div class="form-group text-right">
                 {% if isConnPresent %}
-                    <a href="{{ path('/database/select') }}" class="btn btn-sm btn-success waves-effect waves-light">
+                    <a href="{{ path('/database/select') }}" class="btn btn-success">
                         Select Database
                     </a>
                 {% endif %}
-                <button class="btn btn-sm btn-info waves-effect waves-light" id="btnConnect">
+                <button class="btn btn-info" id="btnConnect">
                     Connect
                 </button>
             </div>
