--- a/src/main/resources/templates/layout/header.twig
+++ b/src/main/resources/templates/layout/header.twig
@@ -11,17 +11,35 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="connDropdown" role="button"
                        data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                        Connection
+                        {% if utils.hasOrmConnection() %}
+                            <small>( {{ utils.getDatabaseName() }} )</small>
+                        {% endif %}
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
+                    <div class="dropdown-menu" aria-labelledby="connDropdown">
+                        {% set hasJdbcConn = utils.hasJdbcConnection() %}
+                        {% if user %}
+                            <a class="dropdown-item" href="{{ path("/database/select/authenticated") }}">
+                                Switch database
+                            </a>
+                        {% else %}
+                            <a class="dropdown-item" href="{{ path("/database/connect") }}">
+                                {% if hasJdbcConn %}
+                                    Change connection
+                                {% else %}
+                                    Connect to a database
+                                {% endif %}
+                            </a>
+                            {% if hasJdbcConn %}
+                                <a class="dropdown-item" href="{{ path("/database/select") }}">Select database</a>
+                                <a class="dropdown-item" href="{{ path("/database/create") }}">Create new database</a>
+                            {% endif %}
+                        {% endif %}
+
                         <a class="dropdown-item" href="#">Another action</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a>
