Added login functionality.

--- a/src/main/resources/templates/layout/header.twig
+++ b/src/main/resources/templates/layout/header.twig
@@ -8,7 +8,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
@@ -35,19 +35,25 @@
                                 {% endif %}
                             </a>
                             {% if hasJdbcConn %}
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path("/database/select") }}">Select database</a>
                                 <a class="dropdown-item" href="{{ path("/database/create") }}">Create new database</a>
                             {% endif %}
                         {% endif %}
-
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
+
+                {% if user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path("/logout") }}">Logout</a>
+                    </li>
+                {% else %}
+                    {% if utils.hasOrmConnection() %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("/login") }}">Login</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
