--- a/src/main/resources/templates/conn/db-connection.twig
+++ b/src/main/resources/templates/conn/db-connection.twig
@@ -43,7 +43,7 @@
             </div>
 
             <div class="form-group text-right">
-                {% if utils.hasJdbcConnection(request) %}
+                {% if utils.hasJdbcConnection() %}
                     <a href="{{ path('/database/select') }}" class="btn btn-success">
                         Select Database
                     </a>
