--- a/src/main/resources/templates/security/login.twig
+++ b/src/main/resources/templates/security/login.twig
@@ -1,29 +1,29 @@
 {% extends '../base-layout.twig' %}
 
 {% block body %}
-    <h4>Login</h4>
-
-    <form method="post">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input value="{{ model.username.username }}" type="text" id="username" name="username" placeholder="Username"
-                   class="form-control" required>
-            {% embed '../field-err.twig' with {fieldName: 'username'} %} {% endembed %}
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password"
-                   placeholder="******"
-                   class="form-control" required>
-            {% embed '../field-err.twig' with {fieldName: 'password'} %} {% endembed %}
-        </div>
-
-        <div class="form-group d-flex">
-            <div class="ml-auto">
-                <button class="btn btn-info">Login</button>
+    <div class="mr-auto mt-2 pt-3">
+        <h3>Login</h3>
+        <form method="post">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input value="{{ model.username.username }}" type="text" id="username" name="username"
+                       class="form-control"
+                       placeholder="Username" required>
+                {% embed '../field-err.twig' with {fieldName: 'username'} %} {% endembed %}
             </div>
-        </div>
-    </form>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="******" class="form-control" required>
+                {% embed '../field-err.twig' with {fieldName: 'password'} %} {% endembed %}
+            </div>
+
+            <div class="form-group d-flex">
+                <div class="ml-auto">
+                    <button class="btn btn-info">Login</button>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
 
