--- a/src/main/resources/templates/layout/header.twig
+++ b/src/main/resources/templates/layout/header.twig
@@ -8,9 +8,6 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="connDropdown" role="button"
                        data-toggle="dropdown"
@@ -24,24 +21,47 @@
                         {% set hasJdbcConn = utils.hasJdbcConnection() %}
                         {% if user %}
                             <a class="dropdown-item" href="{{ path("/database/select/authenticated") }}">
-                                Switch database
+                                Switch Database
                             </a>
                         {% else %}
                             <a class="dropdown-item" href="{{ path("/database/connect") }}">
                                 {% if hasJdbcConn %}
-                                    Change connection
+                                    Change Connection
                                 {% else %}
-                                    Connect to a database
+                                    Connect to a Database
                                 {% endif %}
                             </a>
                             {% if hasJdbcConn %}
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{{ path("/database/select") }}">Select database</a>
-                                <a class="dropdown-item" href="{{ path("/database/create") }}">Create new database</a>
+                                <a class="dropdown-item" href="{{ path("/database/select") }}">Select Database</a>
+                                <a class="dropdown-item" href="{{ path("/database/create") }}">New Database</a>
                             {% endif %}
                         {% endif %}
                     </div>
                 </li>
+
+                {% if user %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="projectsDropdown">
+                            <a class="dropdown-item" href="{{ path("/projects/my") }}">
+                                My Projects
+                            </a>
+                            {% if hasRole(adminRole) %}
+                                <a class="dropdown-item" href="{{ path("/projects/all") }}">
+                                    All Projects
+                                    <small>(admin)</small>
+                                </a>
+                                <a class="dropdown-item" href="{{ path("/projects/create") }}">
+                                    New Project
+                                </a>
+                            {% endif %}
+                        </div>
+                    </li>
+                {% endif %}
 
                 {% if user %}
                     <li class="nav-item">
@@ -54,6 +74,7 @@
                         </li>
                     {% endif %}
                 {% endif %}
+
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
