Added utility class for air-datepicker. Removed scrollbars.

--- a/src/main/resources/templates/base-layout.twig
+++ b/src/main/resources/templates/base-layout.twig
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/selectize/dist/css/selectize.bootstrap3.css">
     <link rel="stylesheet" href="/node_modules/air-datepicker/dist/css/datepicker.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 
     {% block stylesheets %} {% endblock %}
 
