Added data tables with style, sorting, searching and resizing. Imported Handlebars. Added template manager.

--- a/src/main/resources/templates/base-layout.twig
+++ b/src/main/resources/templates/base-layout.twig
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/selectize/dist/css/selectize.bootstrap3.css">
     <link rel="stylesheet" href="/node_modules/air-datepicker/dist/css/datepicker.min.css">
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/main.css">
 
     {% block stylesheets %} {% endblock %}
 
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/node_modules/handlebars/dist/handlebars.min.js"></script>
     <script src="/node_modules/selectize/dist/js/standalone/selectize.min.js"></script>
     <script src="/node_modules/air-datepicker/dist/js/datepicker.min.js"></script>
     <script src="/node_modules/air-datepicker/dist/js/i18n/datepicker.en.js"></script>
@@ -28,5 +30,7 @@
        $('.selectize').selectize({});
    });
 </script>
+<script src="/static/js/dom-utils.js"></script>
+<script src="/static/js/templates.js"></script>
 {% block javascripts %} {% endblock %}
 </html>
