Added listing for projects. Added some date formatting methods in TwigUtils. Changed the size of the container.

--- a/src/main/resources/static/templates/common/searchButton.hbs
+++ b/src/main/resources/static/templates/common/searchButton.hbs
@@ -2,7 +2,7 @@
     <label for="{{ searchFieldId }}" class="d-inline">Search</label>
 {{/if}}
 
-<select id="{{ searchTypeId }}" class="btn btn-outline-info pr-2 pl-2"
+<select id="{{ searchTypeId }}" class="btn btn-sm btn-outline-info pr-2 pl-2"
     {{# if hideOptions }}style="display: none;" {{/if}}>
 
     <option selected style="font-size: 14px">All</option>
@@ -11,4 +11,4 @@
     {{/each}}
 </select>
 
-<input id="{{ searchFieldId }}" type="text" class="table-search-field btn btn-outline-info text-left pr-2 pl-2">
+<input id="{{ searchFieldId }}" type="text" class="table-search-field btn btn-sm btn-outline-info text-left pr-2 pl-2">
