--- a/src/main/resources/templates/projects/list.twig
+++ b/src/main/resources/templates/projects/list.twig
@@ -2,9 +2,10 @@
 
 {% block body %}
     <div class="mr-auto mt-2 pt-3">
-        <h3>{{ viewModel.viewTitle }}</h3>
         <div class="row pb-2">
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <h3>{{ viewModel.viewTitle }} <small>( {{ viewModel.projects.size }} )</small></h3>
+            </div>
             <div class="col-md-6 text-right">
                 <div id="searchBarContainer"></div>
             </div>
