Added project details page (not ready) and linking to it.

--- a/src/main/resources/static/css/data-tables.css
+++ b/src/main/resources/static/css/data-tables.css
@@ -105,6 +105,10 @@
     transition: all 0.1s;
 }
 
+.table-style .table-style-row .col-link {
+    cursor: pointer;
+}
+
 .table-style .table-style-row:hover td {
     color: black;
     background: rgba(62, 69, 81, 0.1);
