--- a/src/main/resources/templates/tables/projects-advanced.twig
+++ b/src/main/resources/templates/tables/projects-advanced.twig
@@ -29,8 +29,8 @@
     {% for projectNode in projects %}
         {% set project = projectNode.project %}
         <tr class="table-style-row" data-project-id="{{ project.id }}">
-            <td>{{ project.id }}</td>
-            <td>{{ project.projectName }}</td>
+            <td class="col-link">{{ project.id }}</td>
+            <td class="col-link">{{ project.projectName }}</td>
             <td data-sort="{{ utils.millisFromDate(project.startDate) }}">{{ utils.formatDate(project.startDate) }}</td>
             <td>{{ project.owner.username }}</td>
             <td>{{ projectNode.mainTasks.size }}</td>
