--- a/src/main/resources/templates/projects/list.twig
+++ b/src/main/resources/templates/projects/list.twig
@@ -4,7 +4,9 @@
     <div class="mr-auto mt-2 pt-3">
         <div class="row pb-2">
             <div class="col-md-6">
-                <h3>{{ viewModel.viewTitle }} <small>( {{ viewModel.projects.size }} )</small></h3>
+                <h3>{{ viewModel.viewTitle }}
+                    <small>( {{ viewModel.projects.size }} )</small>
+                </h3>
             </div>
             <div class="col-md-6 text-right">
                 <div id="searchBarContainer"></div>
@@ -34,7 +36,12 @@
                     'Project Name'
                 ],
                 searchFieldId: 'searchProjectsField',
-            })
+            });
+
+            $('.col-link').on('click', function (e) {
+               const id = $(this).parent().data('project-id');
+               location.href = "{{ path("/projects/details/") }}" + id;
+            });
         });
     </script>
 {% endblock %}
