--- a/src/main/resources/templates/layout/header.twig
+++ b/src/main/resources/templates/layout/header.twig
@@ -62,6 +62,20 @@
                         </div>
                     </li>
                 {% endif %}
+
+                {% if hasRole(adminRole) %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Admin
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="adminDropdown">
+                            <a class="dropdown-item" href="{{ path("/users/create") }}">
+                                Create User
+                            </a>
+                        </div>
+                    </li>
+                {% endif %}
             </ul>
 
             <ul class="navbar-nav ml-auto">
