Moved search button configs to a single file.

--- a/src/main/resources/templates/tables/projects-advanced.twig
+++ b/src/main/resources/templates/tables/projects-advanced.twig
@@ -10,7 +10,7 @@
         <th class="col-sortable">
             Start Date
         </th>
-        <th class="col-sortable">
+        <th class="col-sortable searchable-col" search-type="Owner">
             Owner
         </th>
         <th class="col-sortable">
