--- a/src/main/resources/templates/layout/header.twig
+++ b/src/main/resources/templates/layout/header.twig
@@ -81,6 +81,9 @@
             <ul class="navbar-nav ml-auto">
                 {% if user %}
                     <li class="nav-item">
+                        <a class="nav-link" href="#">{{ user.username }}</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path("/logout") }}">Logout</a>
                     </li>
                 {% else %}
