--- a/src/main/resources/templates/projects/list.twig
+++ b/src/main/resources/templates/projects/list.twig
@@ -22,25 +22,18 @@
 
 {% block javascripts %}
     <script src="/static/js/data-tables.js"></script>
+    <script src="/static/js/data-table-search-presets.js"></script>
 
     <script>
         $(function () {
             const table = document.getElementById('listProjectsTable');
             const container = document.getElementById('searchBarContainer');
 
-            TableUtils.createSearchBarForTable(table, container, {
-                showLabel: true,
-                hideOptions: false,
-                options: [
-                    'Id',
-                    'Project Name'
-                ],
-                searchFieldId: 'searchProjectsField',
-            });
+            SearchPresets.project(table, container);
 
             $('.col-link').on('click', function (e) {
-               const id = $(this).parent().data('project-id');
-               location.href = "{{ path("/projects/details/") }}" + id;
+                const id = $(this).parent().data('project-id');
+                location.href = "{{ path("/projects/details/") }}" + id;
             });
         });
     </script>
