--- a/src/main/resources/templates/projects/details.twig
+++ b/src/main/resources/templates/projects/details.twig
@@ -56,12 +56,44 @@
 
         {% if isOwner %}
             <div>
-                <h3>Tasks</h3>
                 <hr>
-                {% for task in viewModel.mainTasks %}
-                    <p>{{ task.taskName }}</p>
-                {% endfor %}
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Tasks</h3>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <div id="projectTasksSearchContainer"></div>
+                    </div>
+                </div>
+                <div class="mt-1 mb-5 pb-2">
+                    {% embed '../tables/tasks-simple.twig' with {'tasks': viewModel.mainTasks} %} {% endembed %}
+                </div>
             </div>
         {% endif %}
     </div>
+{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="/static/css/data-tables.css">
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/static/js/data-tables.js"></script>
+    <script src="/static/js/data-table-search-presets.js"></script>
+
+    <script>
+        $(function () {
+            {% if isOwner %}
+            const table = document.getElementById('listTasksTable');
+            const container = document.getElementById('projectTasksSearchContainer');
+
+            SearchPresets.task(table, container);
+            {% endif %}
+
+            {#$('.col-link').on('click', function (e) {#}
+            {#const id = $(this).parent().data('project-id');#}
+            {#location.href = "{{ path("/projects/details/") }}" + id;#}
+            {#});#}
+        });
+    </script>
 {% endblock %}
