--- a/src/main/resources/templates/projects/details.twig
+++ b/src/main/resources/templates/projects/details.twig
@@ -3,6 +3,7 @@
 {% block body %}
     {% set project = viewModel.project %}
     {% set isOwner = project.owner.id == user.id %}
+
     <div class="mr-auto mt-2 pt-3">
         <div>
             <h3>Details</h3>
@@ -52,14 +53,32 @@
                     <dd class="col-md-8">{{ myReportsTotalHours }}</dd>
                 </dl>
             </div>
+            <br>
         {% endif %}
 
         {% if isOwner %}
-            <div>
-                <hr>
+            <div descr="Participants">
+                <div class="mt-1 addable-table-container">
+                    <h3>Participants</h3>
+                    <hr class="mt-1 mb-1">
+                    <div class="row pb-2">
+                        <div class="col-md-6">
+                            <button class="btn btn-sm btn-info text-light add-row-btn pt-0 pb-0">Add</button>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <div id="participantsSearchButtonContainer"></div>
+                        </div>
+                    </div>
+                    {% embed '../tables/project-participants.twig' with {'users': project.participants} %} {% endembed %}
+                </div>
+            </div>
+            <br>
+            <div descr="Tasks">
+                <h3>Tasks</h3>
+                <hr class="mt-1 mb-1">
                 <div class="row">
                     <div class="col-md-6">
-                        <h3>Tasks</h3>
+
                     </div>
                     <div class="col-md-6 text-right">
                         <div id="projectTasksSearchContainer"></div>
@@ -83,11 +102,44 @@
 
     <script>
         $(function () {
-            {% if isOwner %}
-            const table = document.getElementById('listTasksTable');
-            const container = document.getElementById('projectTasksSearchContainer');
 
-            SearchPresets.task(table, container);
+            const callAction = (url) => {
+                $.ajax({
+                    type: 'POST',
+                    url,
+                    success: function (res) {
+                        alert(res.response.message);
+                        location.reload();
+                    },
+                    error: function (err) {
+                        console.log(err);
+                        alert('Something went wrong!');
+                        location.reload();
+                    }
+                });
+            };
+
+            {% if isOwner %}
+
+            const tasksTable = document.getElementById('listTasksTable');
+            const tasksSearchContainer = document.getElementById('projectTasksSearchContainer');
+            SearchPresets.task(tasksTable, tasksSearchContainer);
+
+            const participantsTable = document.getElementById('listProjectParticipantsTable');
+            const participantsSearchContainer = document.getElementById('participantsSearchButtonContainer');
+            SearchPresets.participants(participantsTable, participantsSearchContainer);
+
+            const jParticipantsTable = $(participantsTable);
+            jParticipantsTable.on('click', '.add-participant-btn', function (e) {
+                const participantName = $(this).parent().parent().find('.enter-participant-name').val();
+                callAction('{{ path("/projects/"~ project.id ~"/add/") }}' + participantName);
+            });
+
+            jParticipantsTable.find('.remove-participant-btn').on('click', function (e) {
+                const participantName = $(this).data('username');
+                callAction('{{ path("/projects/"~ project.id ~"/remove/") }}' + participantName);
+            });
+
             {% endif %}
 
             {#$('.col-link').on('click', function (e) {#}
