Added participant total reported time in project details page.

--- a/src/main/resources/templates/projects/details.twig
+++ b/src/main/resources/templates/projects/details.twig
@@ -69,7 +69,7 @@
                             <div id="participantsSearchButtonContainer"></div>
                         </div>
                     </div>
-                    {% embed '../tables/project-participants.twig' with {'users': project.participants} %} {% endembed %}
+                    {% embed '../tables/project-participants.twig' with {'participants': participants} %} {% endembed %}
                 </div>
             </div>
             <br>
