--- a/src/main/resources/templates/projects/details.twig
+++ b/src/main/resources/templates/projects/details.twig
@@ -102,6 +102,7 @@
 {% block javascripts %}
     <script src="/static/js/data-tables.js"></script>
     <script src="/static/js/data-table-search-presets.js"></script>
+    <script src="/static/js/data-table-linking.js"></script>
 
     <script>
         $(function () {
@@ -126,6 +127,7 @@
             const tasksTable = document.getElementById('listTasksTable');
             const tasksSearchContainer = document.getElementById('projectTasksSearchContainer');
             SearchPresets.task(tasksTable, tasksSearchContainer);
+
             {% endif %}
 
             {% if isOwner %}
@@ -146,11 +148,6 @@
             });
 
             {% endif %}
-
-            {#$('.col-link').on('click', function (e) {#}
-            {#const id = $(this).parent().data('project-id');#}
-            {#location.href = "{{ path("/projects/details/") }}" + id;#}
-            {#});#}
         });
     </script>
 {% endblock %}
