Added report template and added the required actions to fill the forms. Added home controller.

--- a/src/main/resources/templates/base-layout.twig
+++ b/src/main/resources/templates/base-layout.twig
@@ -26,6 +26,9 @@
 
 </body>
 <script>
+    {% if user %}
+        const USER_ID = {{ user.id }};
+    {% endif %}
     $(function () {
         $('.selectize').selectize({});
     });
