--- a/src/main/resources/templates/layout/header.twig
+++ b/src/main/resources/templates/layout/header.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container" style="max-width: 1400px;">
-        <a class="navbar-brand" href="{{ path("/") }}">Time Reporter</a>
+        <a class="navbar-brand" href="{% if user %}{{ path("/database/cache/clear") }}{% else %}{{ path("/") }}{% endif %}">Time Reporter</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
