Added skipCompleted flag for tasks, and set where completed tasks should not be shown. Fixed small linking bug in data tables.

--- a/src/main/resources/templates/tasks/my-tasks.twig
+++ b/src/main/resources/templates/tasks/my-tasks.twig
@@ -7,6 +7,10 @@
                 <h3>My Tasks
                     <small>( {{ tasks.size }} )</small>
                 </h3>
+                <label><input type="checkbox"
+                              id="showOnlyInProgress" {% if request.queryParameters.get("skipCompleted") %} checked {% endif %}>
+                    Show only in progress
+                </label>
             </div>
             <div class="col-md-6 text-right">
                 <div id="searchBarContainer"></div>
