--- a/src/main/resources/templates/layout/header.twig
+++ b/src/main/resources/templates/layout/header.twig
@@ -78,6 +78,17 @@
                             {% endif %}
                         </div>
                     </li>
+                    <li class="nav-item dropdown" descr="reports">
+                        <a class="nav-link dropdown-toggle" href="#" id="reportsDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Reports
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="reportsDropdown">
+                            <a class="dropdown-item" href="{{ path("/reports/my") }}">
+                                My Reports
+                            </a>
+                        </div>
+                    </li>
                 {% endif %}
 
                 {% if hasRole(adminRole) %}
